Iteration 2: Recipe Page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <body>
 <div>
   <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="./recipes/crispy-hash-brown.html" target="_blank">Crispy Hash Brown - Recipe</a></li>
+    <li><a href="./recipes/spiced-pork.html" target="_blank">Spiced Pork - Recipe</a></li>
+    <li><a href="./recipes/irish-pork-stew.html" target="_blank">Irish Pork Stew - Recipe</a></li>
+  </ul>
 </div>
 </body>
 </html>
