Modified as part of adding CSS

--- a/recipes/crispy-hash-brown.html
+++ b/recipes/crispy-hash-brown.html
@@ -8,23 +8,24 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Crispy Hash Brown - Recipe</title>
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body>
-    <div>
-      <h1>Crispy Hash Brown - Recipe</h1>
+  <body class="container">
+    <div class="recipe__title">
+      <h1 class="recipe__title__h1">Crispy Hash Brown - Recipe</h1>
       <img
+        class="main__image"
         src="../images/crispy-hash-brown-img.jpg"
         alt="Image of Crispy Hash Brown"
-        height="400"
       />
     </div>
-    <div>
-      <h2>Description</h2>
+    <div class="description">
+      <h2 class="header__h2">Description</h2>
       <p>
         Good, old-fashioned, restaurant-style hash browns. Perfect with hot
         pepper sauce and ketchup!
       </p>
-      <h2>How to make Hash Browns</h2>
+      <h2 class="header__h2">How to make Hash Browns</h2>
       <p>
         Believe it or not, making crispy hash browns is actually quite easy.
         First, shred your potatoes using your preferred method — either with a
@@ -43,9 +44,9 @@
         about five minutes on each side.
       </p>
     </div>
-    <div>
-      <h2>Ingredients</h2>
-      <ul>
+    <div class="ingredients">
+      <h2 class="header__h2">Ingredients</h2>
+      <ul class="unordered__list">
         <li>2 medium russet potatoes, shredded</li>
         <li>2 medium russet potatoes, shredded</li>
         <li>¼ cup all-purpose flour</li>
@@ -55,9 +56,9 @@
         <li>another test</li>
       </ul>
     </div>
-    <div>
-      <h2>Directions</h2>
-      <ol>
+    <div class="directions">
+      <h2 class="header__h2">Directions</h2>
+      <ol class="ordered__list">
         <li>Gather all ingredients</li>
         <li>
           Rinse shredded potatoes until water is clear, then drain and squeeze
