--- a/recipes/irish-pork-stew.html
+++ b/recipes/irish-pork-stew.html
@@ -8,27 +8,28 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Irish Pork Stew</title>
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body>
-    <div class="heading" id="main__heading">
-      <h1>Irish Pork Stew</h1>
+  <body class="container">
+    <div class="recipe__title">
+      <h1 class="recipe__title__h1">Irish Pork Stew</h1>
       <img
+        class="main__image"
         src="../images/irish-pork-stew.jpg"
         alt="Irish Pork Stew"
-        height="400"
       />
     </div>
-    <div class="heading" id="description">
-      <h2>Description</h2>
+    <div class="description">
+      <h2 class="header__h2">Description</h2>
       <p>
         This Irish pork stew is a variation of corned beef and cabbage. And in
         case you didn't know, corned beef and cabbage is not typically eaten on
         St. Patrick's Day in Ireland.
       </p>
     </div>
-    <div class="heading" id="ingredients">
-      <h2>Ingredients</h2>
-      <ul>
+    <div class="ingredients">
+      <h2 class="header__h2">Ingredients</h2>
+      <ul class="unordered__list">
         <li>1 (2 1/2 pound) boneless pork shoulder, cut into 2-inch cubes</li>
         <li>salt and ground black pepper to taste</li>
         <li>1 tablespoon vegetable oil</li>
@@ -49,9 +50,9 @@
         <li>1 teaspoon chopped fresh flat-leaf parsley, for garnish</li>
       </ul>
     </div>
-    <div class="heading" id="directions">
-      <h2>Directions</h2>
-      <ol>
+    <div class="directions">
+      <h2 class="header__h2">Directions</h2>
+      <ol class="ordered__list">
         <li>Season pork with salt and black pepper.</li>
         <li>
           Heat oil in a large pot over high heat. Working in batches, cook and
