--- a/recipes/spiced-pork.html
+++ b/recipes/spiced-pork.html
@@ -8,22 +8,27 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spiced Port</title>
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body>
-    <div class="heading" id="main__heading">
-      <h1>Spiced Pork</h1>
-      <img src="../images/spiced-pork-img.jpg" height="400" alt="Spiced Pork" />
+  <body class="container">
+    <div class="recipe__title">
+      <h1 class="recipe__title__h1">Spiced Pork</h1>
+      <img
+        class="main__image"
+        src="../images/spiced-pork-img.jpg"
+        alt="Spiced Pork"
+      />
     </div>
-    <div class="heading" id="description">
-      <h2>Description</h2>
+    <div class="description">
+      <h2 class="header__h2">Description</h2>
       <p>
         A quick and easy way to grill pork tenderloin. Coated in a Caribbean
         spice mixture, grilled, and served with homemade peach salsa.
       </p>
     </div>
-    <div class="heading" id="ingredients">
-      <h2>Ingredients</h2>
-      <ul>
+    <div class="ingredients">
+      <h2 class="header__h2">Ingredients</h2>
+      <ul class="unordered__list">
         <li>¾ cup fresh peaches, peeled and diced</li>
         <li>1 small red bell pepper, chopped</li>
         <li>2 tablespoons finely chopped red onion</li>
@@ -41,9 +46,9 @@
         <li>1 pork tenderloin</li>
       </ul>
     </div>
-    <div class="heading" id="directions">
-      <h2>Directions</h2>
-      <ol>
+    <div class="directions">
+      <h2 class="header__h2">Directions</h2>
+      <ol class="ordered__list">
         <li>
           Combine peaches, bell pepper, red onion, cilantro, lime juice, garlic,
           salt, and pepper in a bowl. Set peach salsa aside.
