--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Odin Recipes</title>
-  <meta charset="UTF-8">
-</head>
-<body>
-<div>
-  <h1>Odin Recipes</h1>
-  <ul>
-    <li><a href="./recipes/crispy-hash-brown.html" target="_blank">Crispy Hash Brown - Recipe</a></li>
-    <li><a href="./recipes/spiced-pork.html" target="_blank">Spiced Pork - Recipe</a></li>
-    <li><a href="./recipes/irish-pork-stew.html" target="_blank">Irish Pork Stew - Recipe</a></li>
-  </ul>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body class="container">
+    <div class="recipe__title">
+      <h1 class="site__title__h1">Odin Recipes</h1>
+      <ul class="unordered__list">
+        <li>
+          <a
+            class="link__to__recipes"
+            href="./recipes/crispy-hash-brown.html"
+            target="_blank"
+            >Crispy Hash Brown - Recipe</a
+          >
+        </li>
+        <li>
+          <a
+            class="link__to__recipes"
+            href="./recipes/spiced-pork.html"
+            target="_blank"
+            >Spiced Pork - Recipe</a
+          >
+        </li>
+        <li>
+          <a
+            class="link__to__recipes"
+            href="./recipes/irish-pork-stew.html"
+            target="_blank"
+            >Irish Pork Stew - Recipe</a
+          >
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
